# flask-Vouch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  example.py  pyproject.toml
.github/workflows/: github-pages.yml
benchmarks/: challenge_generation.py
docs/: 404.html  CNAME  generate_challenge_preview.py  index.html  robots.txt  sitemap.xml
flask_vouch/: __init__.py  blocklist.py  engine.py  redis.py  rules.json  vouch.py
flask_vouch/challenges/: __init__.py  audio_captcha.py  base.py  character_captcha.py  circle_captcha.py  cup_captcha.py  datasets.py  image_captcha.py  image_grid_captcha.py  media.py  navigator_attestation.py  rotation_captcha.py  sha256.py  sha256_balloon.py  sliding_captcha.py  third_party_captcha.py  trace_captcha.py
flask_vouch/challenges/templates/: audio_captcha.html  character_captcha.html  circle_captcha.html  cup_captcha.html  image_captcha.html  image_grid_captcha.html  navigator_attestation.html  rotation_captcha.html  sha256.html  sha256_balloon.html  sliding_captcha.html  third_party_captcha.html  trace_captcha.html
flask_vouch/extras/: __init__.py  error_handler.py  rate_limiter.py  third_party_captcha.py
flask_vouch/extras/templates/: error.html
tests/: test_coverage.py  test_vouch.py
